--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "dependencies": {
     "@grpc/grpc-js": "^0.3.2",
     "@nuxtjs/pwa": "^2.0.5",
+    "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
     "firebase": "^5.6.0",
     "firebase-auth": "^0.1.2",
+    "node-sass": "^4.11.0",
     "nuxt": "^2.3.0",
+    "sass-loader": "^7.1.0",
+    "vue-chartjs": "^3.4.0",
     "vuexfire": "^2.3.0"
   },
   "devDependencies": {
